--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 		<div> 
 		<label for="likeness">Likeness:</label>
 		<input type="likeness" id="likeness" name="likeness" min="1" max="100" required>
-		<div>
+		</div>
 			
 		</form>
     <script type="text/javascript" src="./script.js">
