--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
 		<input type="Color" id="favcolor" name="favcolor" required>
 		<label for="likeness">Likeness:</label>
 		<input type="likeness" id="likeness" name="likeness" min="1" max="100" required>
+		 <input type="submit" value="Submit">
 		</form>
     <script type="text/javascript" src="./script.js">
 </script>
