--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
 		<label for="name">Name:</label>
 		<input type ="text" id="name" name="name" minlength="3" maxlength="50" required>
 	     <label for="portfolio">Portfolio:</label>
-         <input type ="URL" id="portfolio" name="portfolio" required>
-		<label for="favcolour">FavoriteColor:</label>
-		<input type="Color" id="favcolor" name="favcolor" required>
+         <input type ="url" id="portfolio" name="portfolio" required>
+		<label for="favcolour">Favorite Color:</label>
+		<input type="color" id="favcolor" name="favcolor" required>
 		<label for="likeness">Likeness:</label>
 		<input type="likeness" id="likeness" name="likeness" min="1" max="100" required>
 		 <input type="submit" value="Submit">
